# fo-analytics

./: .env.example  .gitignore  CLAUDE.md  LOGGING_IMPLEMENTATION.md  Makefile  README.md  Tiltfile  docker-compose.yml
backend/: .coveragerc  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  main.py  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 202507241144_add_chat_session_and_message_tables.py  c2deb7c267b4_add_code_fields_to_strategies.py  ceefb50e77b4_add_extracted_text_field_to_documents_.py
backend/scripts/: test_document_pipeline.py
backend/src/: main.py  worker.py
backend/src/api/: auth.py  backtests.py  chat.py  documents.py  health.py  portfolio.py  strategies.py  users.py  websockets.py
backend/src/core/: auth.py  config.py  database.py  dependencies.py  security.py
backend/src/messaging/: README.md  __init__.py  backtest_consumer.py  backtest_schemas.py  connection.py  consumer.py  publisher.py  schemas.py
backend/src/middleware/: logging.py
backend/src/models/: __init__.py  backtest.py  base.py  chat.py  document.py  strategy.py  user.py
backend/src/repositories/: README.md  __init__.py  backtest.py  base.py  chat_repository.py  document.py  strategy.py  unit_of_work.py  user.py
backend/src/schemas/: __init__.py  auth.py  backtest.py  chat.py  document.py  portfolio.py  strategy.py
backend/src/services/: __init__.py  auth_service.py  chat_service.py  document_parser.py  storage.py  user_service.py
backend/src/utils/: logging.py  logging_README.md  logging_config_example.py
backend/src/workers/: backtest_worker.py
backend/tests/: conftest.py  test_websocket_integration.py  test_websockets.py
backend/tests/api/: test_documents_minio.py  test_strategies_code.py
backend/tests/integration/: test_document_processing_pipeline.py
backend/tests/messaging/: __init__.py  conftest.py  test_connection.py  test_consumer.py  test_consumer_websocket.py  test_coverage_summary.md  test_publisher.py  test_schemas.py
backend/tests/services/: test_document_parser.py  test_storage.py
backend/tests/unit/: test_config.py  test_core_auth.py  test_logging.py  (+1 more)
(+172 files in other folders)
